# football_analysis

football-analysis/: README.md  pyproject.toml
football-analysis/conf/base/: logging.yml
football-analysis/docs/source/: conf.py  index.rst
football-analysis/src/: pyproject.toml
football-analysis/src/football_analysis/: __init__.py  __main__.py  settings.py
football-analysis/src/tests/: test_run.py
