[tool.poetry]
name = "football_analysis"
version = "0.1.0"
description = ""
authors = ["Siddhanth Shetty <siddhanthds@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kedro = "^0.18.13"
setuptools = "68.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "football_analysis"
project_name = "Football analysis"
kedro_init_version = "0.18.13"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/football_analysis -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
